[tool.poetry]
name = "asynctkinter"
version = "0.3.1"
description = "async library for tkinter"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/gottadiveintopython/asynctkinter'
homepage = 'https://github.com/gottadiveintopython/asynctkinter'
keywords = ['async', 'tkinter', ]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "asynctkinter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
asyncgui = "~0.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
