[project]
name = "asynctkinter"
version = "0.5.0.dev0"
description = "async library for tkinter"
authors = [{ name = "Nattōsai Mitō", email = "flow4re2c@gmail.com" }]
requires-python = ">=3.10.0,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "async",
    "tkinter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncgui>=0.9,<0.12",
    "asyncgui-ext-clock>=0.6.1,<0.7",
]

[project.urls]
Repository = "https://github.com/asyncgui/asynctkinter"

[dependency-groups]
example = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
